# setlist-survival

./: .gitignore  .pre-commit-config.yaml  Analysis.ipynb  Get Setlists.ipynb  README.md  config.yaml  get_spotify_data.py  requirements.txt  setup.cfg
lib/setlist_fm/: converter.py
lib/spotify/: auth.py  models.py  requests.py
notebooks/: Exploratory Analysis.ipynb
src/: config.py  data_prep.py  ingest.py  ingester.py  logger.py  main.py
src/data/: ingest.py
src/data/sources/: __init__.py
src/data/sources/setlist_fm/: converter.py
src/data/sources/spotify/: auth.py  models.py  requests.py  source.py
src/sources/setlist_fm/: converter.py  fetcher.py  models.py  source.py
src/sources/spotify/: auth.py  models.py  source.py
