[metadata]
name = setlist_survival
version = 0.0.1
description = "A toy end to end machine learning project"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbmackenzie/setlist-survival
author = Matt Mackenzie
author_email = mbm2228@columbia.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    project = src.main:cli

[options.packages.find]
exclude =
    tests*
    data*
    notebooks*
    docs*

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-requests.*]
ignore_missing_imports = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
